# llm_fine-tuning

./: .env.example  .gitignore  README.md  activate.sh  config.yaml.example  environment.yaml  pyproject.toml  ruff.toml
libs/tracking/: README.md  pyproject.toml
libs/tracking/src/ml_tracking/: get_tracker.py  ml_tracker.py  mlflow_tracker.py  no_tracker.py  tracker_uri.py
requirements/: requirements-main.txt  requirements.txt
sample_data/: coa_to_json.example.json  features.json  sample.jsonl
scripts/: evaluate.py  test_inference.py
src/finetune/: MistralLLM.py  coa.py  config.py  const.py  data_utils.py  dirs.py  fake_chat_model.py  finetune_llm.py  finetune_utils.py  logging_config.py  main.py  performance.py  prompt_templates.py  text_extraction.py  training_arguments.py
tests/: test_extracting_prediction.py
